This file documents the revision history for Perl extension Mojolicious.

2.69  2012-03-26
  - Changed number of redirects ojo and the get command will follow to 10.
  - Improved ojo to detect proxy servers automatically.
  - Improved Mojo::DOM::CSS performance.
  - Improved documentation.
  - Improved Mojo::Reactor tests to be less strict.
  - Fixed a bug where paths and classes in Mojolicious::Static and
    Mojolicious::Renderer would have the wrong precedence.
  - Fixed small bug where Hypnotoad would ignore the MOJO_REVERSE_PROXY
    environment variable.

2.68  2012-03-24
  - Improved documentation.
  - Fixed generate command.

2.67  2012-03-24
  - Added start_app method to Mojo::Command.
  - Improved documentation.
  - Improved tests.
  - Fixed small bugs in Mojo::Command and Mojolicious::Commands.

2.66  2012-03-23
  - Reformatted "Changes".
  - Improved Mojo::Reactor::Poll performance.
  - Improved tests.
  - Fixed one_tick semantics to be equal in Mojo::Reactor::Poll and
    Mojo::Reactor::EV.

2.65  2012-03-22
  - Deprecated Mojo::IOLoop->drop in favor of Mojo::IOLoop->remove.
  - Renamed Mojo::Reactor->drop to Mojo::Reactor->remove.
  - Added Mojo::Reactor::Poll.
  - Added one_tick method to Mojo::Reactor and Mojo::Reactor::EV.
  - Removed experimental status from Mojo::IOLoop::Client.
  - Removed experimental status from Mojo::IOLoop::Server.
  - Removed experimental status from Mojo::IOLoop::Stream.
  - Removed experimental status from Mojo::Reactor.
  - Removed experimental status from Mojo::Reactor::EV.
  - Removed experimental status from client_class, max_accepts, reactor,
    server_class and stream_class attributes in Mojo::IOLoop.
  - Removed experimental status from client server and stream methods in
    Mojo::IOLoop.
  - Updated jQuery to version 1.7.2.
  - Improved documentation.
  - Improved tests.

2.64  2012-03-21
  - Deprecated Mojolicious::Routes->controller_base_class in favor of
    Mojolicious::Routes->base_classes.