@@ -9,7 +9,7 @@ BEGIN {
   $ENV{MOJO_REACTOR}    = 'Mojo::Reactor::Poll';
 }
 
-use Test::More tests => 709;
+use Test::More tests => 703;
 
 # "Wait you're the only friend I have...
 #  You really want a robot for a friend?
@@ -903,6 +903,10 @@ my $source = $t->tx->local_address;
 $t->get_ok('/0', {'X-Forwarded-For' => '192.168.2.2, 192.168.2.1'})
   ->status_is(200)->content_like(qr#http\://localhost\:\d+/0\-$source\-0#);
 
+# GET /0 ("X-Forwarded-HTTPS")
+$t->get_ok('/0', {'X-Forwarded-HTTPS' => 1})->status_is(200)
+  ->content_like(qr#http\://localhost\:\d+/0\-$source\-0#);
+
 # GET /0 (reverse proxy with "X-Forwarded-For")
 {
   local $ENV{MOJO_REVERSE_PROXY} = 1;
@@ -911,28 +915,11 @@ $t->get_ok('/0', {'X-Forwarded-For' => '192.168.2.2, 192.168.2.1'})
     ->content_like(qr#http\://localhost\:\d+/0\-192\.168\.2\.1\-0#);
 }
 
-# GET /0 ("X-Forwarded-Host")
-$t->get_ok('/0', {'X-Forwarded-Host' => 'mojolicio.us:8080'})->status_is(200)
-  ->content_like(qr#http\://localhost\:\d+/0\-$source\-0#);
-
-# GET /0 (reverse proxy with "X-Forwarded-Host")
+# GET /0 (reverse proxy with "X-Forwarded-HTTPS")
 {
   local $ENV{MOJO_REVERSE_PROXY} = 1;
-  $t->get_ok('/0', {'X-Forwarded-Host' => 'mojolicio.us:8080'})
-    ->status_is(200)->content_is("http://mojolicio.us:8080/0-$source-0");
-}
-
-# GET /0 ("X-Forwarded-HTTPS" and "X-Forwarded-Host")
-$t->get_ok('/0',
-  {'X-Forwarded-HTTPS' => 1, 'X-Forwarded-Host' => 'mojolicio.us'})
-  ->status_is(200)->content_like(qr#http\://localhost\:\d+/0\-$source\-0#);
-
-# GET /0 (reverse proxy with "X-Forwarded-HTTPS" and "X-Forwarded-Host")
-{
-  local $ENV{MOJO_REVERSE_PROXY} = 1;
-  $t->get_ok('/0',
-    {'X-Forwarded-HTTPS' => 1, 'X-Forwarded-Host' => 'mojolicio.us'})
-    ->status_is(200)->content_is("https://mojolicio.us/0-$source-0");
+  $t->get_ok('/0', {'X-Forwarded-HTTPS' => 1})->status_is(200)
+    ->content_like(qr#https\://localhost\:\d+/0\-$source\-0#);
 }
 
 # DELETE /inline/epl
